fixed overlay overflow on small screen size

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,13 +2,14 @@
 @import url("https://fonts.googleapis.com/css?family=Crete+Round&display=swap");
 html,
 body {
+  width: 100%;
   height: 100%;
-  overflow: auto;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
-  width: 100%;
-  position: absolute;
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
   color: #444444;
