--- a/assets/styles/site/_generic.scss
+++ b/assets/styles/site/_generic.scss
@@ -1,14 +1,15 @@
 /* General Style */
 html,
 body {
+    width: 100%;
     height: 100%;
-    overflow: auto;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 
 body {
-    width: 100%;
-    position: absolute;
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     color: #444444;
@@ -50,4 +51,3 @@ h2 {
     max-width: 35%;
     margin: auto;
 }
-
